OLC2_PY2/backend-app/gramatica/.antlr/SintaxParser.java
// Generated from c:/Users/LENOVO/Desktop/PY2-OLC2-202006373/OLC2_PY2/backend-app/gramatica/Sintax.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SintaxParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT=1, FLOAT=2, STRING=3, BOOL=4, CHARACTER=5, IGUAL=6, DOSPUNTOS=7, OPEN_PAREN=8, 
		CLOSE_PAREN=9, INCREMENTO=10, DECREMENTO=11, OPEN_BRACKET=12, CLOSE_BRACKET=13, 
		OPEN_SQUARE_BRACKET=14, CLOSE_SQUARE_BRACKET=15, COMA=16, PUNTO=17, GUION_BAJO=18, 
		MAS=19, MENOS=20, MUL=21, DIV=22, MOD=23, MAYOR=24, MENOR=25, MAYOR_IGUAL=26, 
		MENOR_IGUAL=27, IGUAL_IGUAL=28, DIFERENTE=29, AND=30, OR=31, NOT=32, VAR=33, 
		LET=34, PRINT=35, IF=36, ELSE=37, SWITCH=38, CASE=39, DEFAULT=40, WHILE=41, 
		FOR=42, IN=43, BREAK=44, CONTINUE=45, RETURN=46, TRESPUNTOS=47, GUARD=48, 
		APPEND=49, COUNT=50, REMOVE=51, REMOVELAST=52, AT=53, ISEMPTY=54, FUNC=55, 
		INOUT=56, FLECHA=57, REFERENCIA=58, STRUCT=59, MUTATING=60, SELF=61, NUMBER=62, 
		VALORBOOL=63, NULO=64, STRING_SINTAX=65, ESCAPE_SEQUENCE=66, CARACTER=67, 
		SINVALOR=68, ID=69, COMMENT=70, COMMENT_MULT=71, WS=72;
	public static final int
		RULE_inicio = 0, RULE_lista = 1, RULE_lista_proceso = 2, RULE_comentarios = 3, 
		RULE_retornar = 4, RULE_declaracion = 5, RULE_dec_tipo_valor = 6, RULE_dec_valor = 7, 
		RULE_asignacion = 8, RULE_asignacionVariable = 9, RULE_asignacionVector = 10, 
		RULE_subasig = 11, RULE_print = 12, RULE_if = 13, RULE_elseif_ = 14, RULE_else = 15, 
		RULE_switch = 16, RULE_caso = 17, RULE_default = 18, RULE_while = 19, 
		RULE_for = 20, RULE_guard = 21, RULE_dec_vector = 22, RULE_dec_vector_V_C = 23, 
		RULE_subVC = 24, RULE_funcvectorList = 25, RULE_tipevector = 26, RULE_bloque = 27, 
		RULE_control = 28, RULE_tipo = 29, RULE_expresion = 30, RULE_funciones = 31, 
		RULE_parametros = 32, RULE_existeExInt = 33, RULE_tipofuncion = 34, RULE_tipoinout = 35, 
		RULE_funcLLamada = 36, RULE_parametrosLLamada = 37, RULE_estructs = 38, 
		RULE_lista_struct = 39, RULE_funcionestruct = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "lista", "lista_proceso", "comentarios", "retornar", "declaracion", 
			"dec_tipo_valor", "dec_valor", "asignacion", "asignacionVariable", "asignacionVector", 
			"subasig", "print", "if", "elseif_", "else", "switch", "caso", "default", 
			"while", "for", "guard", "dec_vector", "dec_vector_V_C", "subVC", "funcvectorList", 
			"tipevector", "bloque", "control", "tipo", "expresion", "funciones", 
			"parametros", "existeExInt", "tipofuncion", "tipoinout", "funcLLamada", 
			"parametrosLLamada", "estructs", "lista_struct", "funcionestruct"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Int'", "'Float'", "'String'", "'Bool'", "'Character'", "'='", 
			"':'", "'('", "')'", "'+='", "'-='", "'{'", "'}'", "'['", "']'", "','", 
			"'.'", "'_'", "'+'", "'-'", "'*'", "'/'", "'%'", "'>'", "'<'", "'>='", 
			"'<='", "'=='", "'!='", "'&&'", "'||'", "'!'", "'var'", "'let'", "'print'", 
			"'if'", "'else'", "'switch'", "'case'", "'default'", "'while'", "'for'", 
			"'in'", "'break'", "'continue'", "'return'", "'...'", "'guard'", "'append'", 
			"'count'", "'remove'", "'removeLast'", "'at:'", "'IsEmpty'", "'func'", 
			"'inout'", "'->'", "'&'", "'struct'", "'mutating'", "'self'", null, null, 
			"'nil'", null, null, null, "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INT", "FLOAT", "STRING", "BOOL", "CHARACTER", "IGUAL", "DOSPUNTOS", 
			"OPEN_PAREN", "CLOSE_PAREN", "INCREMENTO", "DECREMENTO", "OPEN_BRACKET", 
			"CLOSE_BRACKET", "OPEN_SQUARE_BRACKET", "CLOSE_SQUARE_BRACKET", "COMA", 
			"PUNTO", "GUION_BAJO", "MAS", "MENOS", "MUL", "DIV", "MOD", "MAYOR", 
			"MENOR", "MAYOR_IGUAL", "MENOR_IGUAL", "IGUAL_IGUAL", "DIFERENTE", "AND", 
			"OR", "NOT", "VAR", "LET", "PRINT", "IF", "ELSE", "SWITCH", "CASE", "DEFAULT", 
			"WHILE", "FOR", "IN", "BREAK", "CONTINUE", "RETURN", "TRESPUNTOS", "GUARD", 
			"APPEND", "COUNT", "REMOVE", "REMOVELAST", "AT", "ISEMPTY", "FUNC", "INOUT", 
			"FLECHA", "REFERENCIA", "STRUCT", "MUTATING", "SELF", "NUMBER", "VALORBOOL", 
			"NULO", "STRING_SINTAX", "ESCAPE_SEQUENCE", "CARACTER", "SINVALOR", "ID", 
			"COMMENT", "COMMENT_MULT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Sintax.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SintaxParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioContext extends ParserRuleContext {
		public ListaContext lista() {
			return getRuleContext(ListaContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SintaxParser.EOF, 0); }
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			lista();
			setState(83);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaContext extends ParserRuleContext {
		public List<Lista_procesoContext> lista_proceso() {
			return getRuleContexts(Lista_procesoContext.class);
		}
		public Lista_procesoContext lista_proceso(int i) {
			return getRuleContext(Lista_procesoContext.class,i);
		}
		public List<FuncionesContext> funciones() {
			return getRuleContexts(FuncionesContext.class);
		}
		public FuncionesContext funciones(int i) {
			return getRuleContext(FuncionesContext.class,i);
		}
		public ListaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista; }
	}

	public final ListaContext lista() throws RecognitionException {
		ListaContext _localctx = new ListaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_lista);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 33)) & ~0x3f) == 0 && ((1L << (_la - 33)) & 481107688239L) != 0)) {
				{
				setState(87);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VAR:
				case LET:
				case PRINT:
				case IF:
				case SWITCH:
				case WHILE:
				case FOR:
				case BREAK:
				case CONTINUE:
				case RETURN:
				case GUARD:
				case STRUCT:
				case ID:
				case COMMENT:
				case COMMENT_MULT:
					{
					setState(85);
					lista_proceso();
					}
					break;
				case FUNC:
					{
					setState(86);
					funciones();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lista_procesoContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public SwitchContext switch_() {
			return getRuleContext(SwitchContext.class,0);
		}
		public WhileContext while_() {
			return getRuleContext(WhileContext.class,0);
		}
		public ForContext for_() {
			return getRuleContext(ForContext.class,0);
		}
		public GuardContext guard() {
			return getRuleContext(GuardContext.class,0);
		}
		public FuncvectorListContext funcvectorList() {
			return getRuleContext(FuncvectorListContext.class,0);
		}
		public FuncLLamadaContext funcLLamada() {
			return getRuleContext(FuncLLamadaContext.class,0);
		}
		public RetornarContext retornar() {
			return getRuleContext(RetornarContext.class,0);
		}
		public EstructsContext estructs() {
			return getRuleContext(EstructsContext.class,0);
		}
		public ComentariosContext comentarios() {
			return getRuleContext(ComentariosContext.class,0);
		}
		public Lista_procesoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_proceso; }
	}

	public final Lista_procesoContext lista_proceso() throws RecognitionException {
		Lista_procesoContext _localctx = new Lista_procesoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_lista_proceso);
		try {
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				declaracion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				asignacion();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				print();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(95);
				if_();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(96);
				switch_();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(97);
				while_();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(98);
				for_();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(99);
				guard();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(100);
				funcvectorList();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(101);
				funcLLamada();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(102);
				retornar();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(103);
				estructs();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(104);
				comentarios();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComentariosContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(SintaxParser.COMMENT, 0); }
		public TerminalNode COMMENT_MULT() { return getToken(SintaxParser.COMMENT_MULT, 0); }
		public ComentariosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comentarios; }
	}

	public final ComentariosContext comentarios() throws RecognitionException {
		ComentariosContext _localctx = new ComentariosContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comentarios);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_la = _input.LA(1);
			if ( !(_la==COMMENT || _la==COMMENT_MULT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RetornarContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(SintaxParser.RETURN, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode BREAK() { return getToken(SintaxParser.BREAK, 0); }
		public TerminalNode CONTINUE() { return getToken(SintaxParser.CONTINUE, 0); }
		public RetornarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_retornar; }
	}

	public final RetornarContext retornar() throws RecognitionException {
		RetornarContext _localctx = new RetornarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_retornar);
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RETURN:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				match(RETURN);
				setState(111);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(110);
					expresion(0);
					}
					break;
				}
				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				match(BREAK);
				}
				break;
			case CONTINUE:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				match(CONTINUE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionContext extends ParserRuleContext {
		public Dec_tipo_valorContext dec_tipo_valor() {
			return getRuleContext(Dec_tipo_valorContext.class,0);
		}
		public Dec_valorContext dec_valor() {
			return getRuleContext(Dec_valorContext.class,0);
		}
		public Dec_vectorContext dec_vector() {
			return getRuleContext(Dec_vectorContext.class,0);
		}
		public Dec_vector_V_CContext dec_vector_V_C() {
			return getRuleContext(Dec_vector_V_CContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracion);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				dec_tipo_valor();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				dec_valor();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				dec_vector();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(120);
				dec_vector_V_C();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dec_tipo_valorContext extends ParserRuleContext {
		public Dec_tipo_valorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_tipo_valor; }
	 
		public Dec_tipo_valorContext() { }
		public void copyFrom(Dec_tipo_valorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionTipoContext extends Dec_tipo_valorContext {
		public Token op;
		public TerminalNode ID() { return getToken(SintaxParser.ID, 0); }
		public TerminalNode DOSPUNTOS() { return getToken(SintaxParser.DOSPUNTOS, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode VAR() { return getToken(SintaxParser.VAR, 0); }
		public TerminalNode LET() { return getToken(SintaxParser.LET, 0); }
		public TerminalNode IGUAL() { return getToken(SintaxParser.IGUAL, 0); }
		public DeclaracionTipoContext(Dec_tipo_valorContext ctx) { copyFrom(ctx); }
	}

	public final Dec_tipo_valorContext dec_tipo_valor() throws RecognitionException {
		Dec_tipo_valorContext _localctx = new Dec_tipo_valorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dec_tipo_valor);
		int _la;
		try {
			_localctx = new DeclaracionTipoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			((DeclaracionTipoContext)_localctx).op = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==VAR || _la==LET) ) {
				((DeclaracionTipoContext)_localctx).op = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(124);
			match(ID);
			setState(125);
			match(DOSPUNTOS);
			setState(126);
			tipo();
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IGUAL) {
				{
				setState(127);
				match(IGUAL);
				}
			}

			setState(130);
			expresion(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dec_valorContext extends ParserRuleContext {
		public Dec_valorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_valor; }
	 
		public Dec_valorContext() { }
		public void copyFrom(Dec_valorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionTipoImplicitoContext extends Dec_valorContext {
		public Token op;
		public TerminalNode ID() { return getToken(SintaxParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(SintaxParser.IGUAL, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode VAR() { return getToken(SintaxParser.VAR, 0); }
		public TerminalNode LET() { return getToken(SintaxParser.LET, 0); }
		public DeclaracionTipoImplicitoContext(Dec_valorContext ctx) { copyFrom(ctx); }
	}

	public final Dec_valorContext dec_valor() throws RecognitionException {
		Dec_valorContext _localctx = new Dec_valorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dec_valor);
		int _la;
		try {
			_localctx = new DeclaracionTipoImplicitoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			((DeclaracionTipoImplicitoContext)_localctx).op = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==VAR || _la==LET) ) {
				((DeclaracionTipoImplicitoContext)_localctx).op = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(133);
			match(ID);
			setState(134);
			match(IGUAL);
			setState(135);
			expresion(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public AsignacionVariableContext asignacionVariable() {
			return getRuleContext(AsignacionVariableContext.class,0);
		}
		public AsignacionVectorContext asignacionVector() {
			return getRuleContext(AsignacionVectorContext.class,0);
		}
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_asignacion);
		try {
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				asignacionVariable();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				asignacionVector();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionVariableContext extends ParserRuleContext {
		public Token op;
		public TerminalNode ID() { return getToken(SintaxParser.ID, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode INCREMENTO() { return getToken(SintaxParser.INCREMENTO, 0); }
		public TerminalNode DECREMENTO() { return getToken(SintaxParser.DECREMENTO, 0); }
		public TerminalNode IGUAL() { return getToken(SintaxParser.IGUAL, 0); }
		public AsignacionVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacionVariable; }
	}

	public final AsignacionVariableContext asignacionVariable() throws RecognitionException {
		AsignacionVariableContext _localctx = new AsignacionVariableContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_asignacionVariable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(ID);
			setState(142);
			((AsignacionVariableContext)_localctx).op = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 3136L) != 0)) ) {
				((AsignacionVariableContext)_localctx).op = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(143);
			expresion(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionVectorContext extends ParserRuleContext {
		public Token op;
		public TerminalNode ID() { return getToken(SintaxParser.ID, 0); }
		public TerminalNode OPEN_SQUARE_BRACKET() { return getToken(SintaxParser.OPEN_SQUARE_BRACKET, 0); }
		public SubasigContext subasig() {
			return getRuleContext(SubasigContext.class,0);
		}
		public TerminalNode CLOSE_SQUARE_BRACKET() { return getToken(SintaxParser.CLOSE_SQUARE_BRACKET, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode IGUAL() { return getToken(SintaxParser.IGUAL, 0); }
		public TerminalNode INCREMENTO() { return getToken(SintaxParser.INCREMENTO, 0); }
		public AsignacionVectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacionVector; }
	}
